--- a/public/global.css
+++ b/public/global.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     outline: 0;
-    
 }
 
 html, body, #root {
@@ -10,4 +11,9 @@ html, body, #root {
     width: 100%;
 }
 
+body, input, button {
+    font-family: 'Open Sans', sans-serif;
+}
+
 .container { max-width: 1440px; }
+
